--- a/view/product.html
+++ b/view/product.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Fetching all products</h1>
+    <form>
+        <label for="product">Product Name</label>
+        <input type="text" name="productName" id="product">
+        <button type="submit">Add Product</button>
+    </form>
 </body>
 </html>
