--- a/view/product.html
+++ b/view/product.html
@@ -6,10 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
+    <h1>Fetching All Products...</h1>
+    <form onsubmit="onSubmitHandler(event)">
         <label for="product">Product Name</label>
         <input type="text" name="productName" id="product">
         <button type="submit">Add Product</button>
     </form>
+     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.8.4/axios.min.js"></script>
+    <script src="/js/product.js"></script>
 </body>
 </html>
